# advent-of-code

./: .gitignore  .sqlfluff  README.md  pyproject.toml
src/advent_of_code/: __init__.py  __main__.py
src/advent_of_code/year2024/: day1_part1.sql  day1_part2.sql  day2_part1.sql  solutions.py
tests/: test_year2024.py
